Fixed overlapping issues for mobile view

--- a/css/project-details.css
+++ b/css/project-details.css
@@ -19,19 +19,7 @@
       font-size: 14px !important;
     }
   }
-
-  @media screen and (max-width: 920px) {
-    .flashcards-button {
-        background-color: #89DAD5 !important;
-        color: white !important;
-    }
-
-    .laze-button {
-        background-color: #3F0072 !important;
-        color: white !important;
-    }
-  }
-
+  
   /* 1050px and below  */
   @media screen and (max-width: 1050px) {
     .desc-background {
@@ -40,6 +28,15 @@
 
     .web-desc-background {
         background: rgba(99, 83, 224, 0.6);
+    }
+
+    .flashcards-desc-background {
+        background: rgba(137, 218, 213, 0.6);
+    }
+
+    .laze-desc-background {
+        background: rgba(57, 37, 133, 0.6);
+        color: white !important;
     }
   }
 
@@ -153,5 +150,13 @@ html {
 }
 
 .web-desc-background {
+    border-radius: 25px;
+}
+
+.laze-desc-background {
+    border-radius: 25px;
+}
+
+.flashcards-desc-background {
     border-radius: 25px;
 }
